@@ -1,3 +1,9 @@
+r18 ====================================================================
+- исправлен метод GradPosition.set_length() - при пересчёте значения
+  length из секунд значение не округлялось
++ добавлен класс MixGenGradGen - генератор, складывающий выхлопы
+  вложенных генераторов (см. описание)
+
 r17 ====================================================================
 * класс GenGradGen переименован в GroupGenGradGen, т.к. является предком
   только для специфических классов, а не для всех
